<resources>
    <string name="app_name">物资清点</string>
    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY">CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ENABLE_CUSTOM_SETTINGS_KEY">ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="MODEL_PATH_KEY">MODEL_PATH_KEY</string>
    <string name="LABEL_PATH_KEY">LABEL_PATH_KEY</string>
    <string name="IMAGE_PATH_KEY">IMAGE_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="INPUT_COLOR_FORMAT_KEY">INPUT_COLOR_FORMAT_KEY</string>
    <string name="INPUT_SHAPE_KEY">INPUT_SHAPE_KEY</string>
    <string name="INPUT_MEAN_KEY">INPUT_MEAN_KEY</string>
    <string name="INPUT_STD_KEY">INPUT_STD_KEY</string>
    <string name="SCORE_THRESHOLD_KEY">SCORE_THRESHOLD_KEY</string>
    <string name="MODEL_PATH_DEFAULT">models/ocr_v2_for_cpu</string>
    <string name="LABEL_PATH_DEFAULT">labels/ppocr_keys_v1.txt</string>
    <string name="IMAGE_PATH_DEFAULT">images/0.jpg</string>
    <string name="CPU_THREAD_NUM_DEFAULT">4</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="INPUT_COLOR_FORMAT_DEFAULT">BGR</string>
    <string name="INPUT_SHAPE_DEFAULT">1,3,960</string>
    <string name="INPUT_MEAN_DEFAULT">0.485, 0.456, 0.406</string>
    <string name="INPUT_STD_DEFAULT">0.229,0.224,0.225</string>
    <string name="SCORE_THRESHOLD_DEFAULT">0.1</string>

    <string name="take_photo">扫码</string>
    <string name="save">保存</string>
    <string name="out_result">退出扫描</string>
    <string name="save_upload">保存并上传</string>
    <string name="in_stock">物资入库</string>
    <string name="out_stock">项目入库清点</string>
    <string name="out_stock_2">项目入库</string>
    <string name="tips">温馨提示</string>
    <string name="ok">确定</string>
    <string name="dialog_progress">正在加载</string>
    <string name="please_wait">请稍后</string>
    <string name="building_id">楼栋编号</string>
    <string name="building_name">楼栋</string>
    <string name="order_date">单据日期</string>
    <string name="order_name">单据编号</string>
    <string name="order_id">订单号</string>
    <string name="partner_id">供应商编号</string>
    <string name="partner_name">供应商</string>
    <string name="user_id">经办人</string>
    <string name="buy_state">付款状态</string>
    <string name="MY_DATA">MyData</string>
    <string name="title_activity_set_dbactivity">SetDBActivity</string>

    <!-- Messages Preferences -->
    <string name="db_listPerference_title">数据库</string>
    <string name="add_db_editTextPerference_title">添加数据库</string>
    <string name="del_db_editTextPerference_title">删除数据库</string>
    <string name="server_listPerference_title">服务器</string>
    <string name="add_server_editTextPerference_title">添加服务器</string>
    <string name="del_server_editTextPerference_title">删除服务器</string>
    <string name="SERVER_LIST">ServerList</string>
    <string name="DB_LIST">DbList</string>

    <!--    初始化服务器地址和数据库-->
    <string name="SERVER_ADDRESS">ServerAddress</string>
    <string name="SERVER_ADDRESS_VALUE_DEFAULT">http://114.67.113.2:8069</string>
    <string name="DB_ADDRESS">DbAddress</string>
    <string name="DB_ADDRESS_VALUE_DEFAULT">xinshengteng</string>

    <!-- 用户信息-->
    <string name="USER_NAME">UserName</string>
    <string name="USER_NAME_VALUE_DEFAULT">username</string>
    <string name="PASS_WORD">PassWord</string>
    <string name="PASS_WORD_VALUE_DEFAULT">password</string>
    <string name="USER_ID">UserId</string>
    <string name="USER_ID_VALUE_DEFAULT">-1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

