<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory android:title="@string/db_listPerference_title">
        <ListPreference
            android:icon="@drawable/ic_dbbrain"
            app:defaultValue="@string/DB_ADDRESS_VALUE_DEFAULT"
            app:entries="@array/db_entries"
            app:entryValues="@array/db_values"
            app:key="@string/db_listPerference_title"
            app:title="@string/db_listPerference_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue=""
            app:dialogMessage="不正确的地址会导致软件异常出错"
            android:icon="@drawable/ic_dbbrain"
            android:key="@string/add_db_editTextPerference_title"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/add_db_editTextPerference_title" />
        <ListPreference
            android:icon="@drawable/ic_dbbrain"
            android:key="@string/del_db_editTextPerference_title"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/del_db_editTextPerference_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/server_listPerference_title">
        <ListPreference
            android:icon="@drawable/ic_server"
            app:defaultValue="@string/SERVER_ADDRESS_VALUE_DEFAULT"
            app:key="@string/server_listPerference_title"
            app:title="@string/server_listPerference_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue=""
            android:icon="@drawable/ic_server"
            android:key="@string/add_server_editTextPerference_title"
            app:dialogMessage="不正确的地址会导致软件异常出错"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/add_server_editTextPerference_title" />

        <ListPreference
            android:icon="@drawable/ic_server"
            app:key="@string/del_server_editTextPerference_title"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:title="@string/del_server_editTextPerference_title" />
    </PreferenceCategory>


</PreferenceScreen>